@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.11.6 - 2016-10-31
 
 CHANGES IN V1.12.0
 
+	- cups-browsed: When auto-generating a PPD set the cost values
+	  in the filter lines to give the highest priority to PDF,
+	  then PWG Raster, Apple Raster, PCL-XL, PostScript, PCL 5c/e.
 	- cups-browsed: Synced the PPD generator with the one of CUPS,
 	  giving the best possible support for IPP Everywhere and
 	  AirPrint printers. Especially support for more media types
